# pyStocks

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  tox.yaml
